# sneaky-snek

./: LICENSE  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
learning/ml_vision/: feed_forward.ipynb  hello.py  pyproject.toml
notebooks/: smoketest.ipynb  trajectory_sim.ipynb
